adjusted portfolio, added 2 projects, temp profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -8,17 +8,17 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : Your Name
+title                    : Eduardo Antonio
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : Your Name
-description              : Your Name - Projects and CV 
-baseurl                  : "" # Set this to "portfolio-<your-github-username>" 
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+name                     : Eduardo Antonio
+description              : Eduardo Antonio - Projects and CV 
+baseurl                  : # Set this to "portfolio-<your-github-username>" 
+url                      : "https://eantonio.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 
 # Theme and Style
 theme: jekyll-theme-minimal
-color_scheme: light # light/default, dark, or aqua
+color_scheme: aqua # light/default, dark, or aqua
 
 sass:
   style: compressed
