--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : Eduardo Antonio
 description              : Eduardo Antonio - Projects and CV 
-baseurl                  : # Set this to "portfolio-<your-github-username>" 
+baseurl                  : "portfolio-eantoniojuarez" # Set this to "portfolio-<your-github-username>" 
 url                      : "https://eantonio.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 
 # Theme and Style
